--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,17 @@
         "noUnusedParameters": true,
         "erasableSyntaxOnly": true,
         "noFallthroughCasesInSwitch": true,
-        "noUncheckedSideEffectImports": true
+        "noUncheckedSideEffectImports": true,
+        "baseUrl": "./src",
+        "paths": {
+            "@lib/*": ["lib/*"],
+            "@components/*": ["components/*"],
+            "@pages/*": ["pages/*"],
+            "@assets/*": ["assets/*"],
+            "@theme/*": ["theme/*"],
+            "@hooks/*": ["hooks/*"],
+            "@content/*": ["content/*"]
+        }
     },
     "include": ["src"]
 }
