--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,14 @@
     "references": [
         { "path": "./tsconfig.app.json" },
         { "path": "./tsconfig.node.json" }
-    ]
+    ],
+    "compilerOptions": {
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "jsx": "react-jsx",
+        "strict": true,
+        "baseUrl": ".",
+        "paths": { "@*": ["src/*"] }
+    }
 }
