--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,37 +1,15 @@
 {
     "compilerOptions": {
-        "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
         "target": "ES2022",
-        "useDefineForClassFields": true,
         "lib": ["ES2022", "DOM", "DOM.Iterable"],
         "module": "ESNext",
         "skipLibCheck": true,
-
-        /* Bundler mode */
-        "moduleResolution": "bundler",
-        "allowImportingTsExtensions": true,
-        "verbatimModuleSyntax": true,
-        "moduleDetection": "force",
+        "moduleResolution": "node",
         "noEmit": true,
         "jsx": "react-jsx",
-
-        /* Linting */
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "erasableSyntaxOnly": true,
-        "noFallthroughCasesInSwitch": true,
-        "noUncheckedSideEffectImports": true,
-        "baseUrl": "./src",
-        "paths": {
-            "@lib/*": ["lib/*"],
-            "@components/*": ["components/*"],
-            "@pages/*": ["pages/*"],
-            "@assets/*": ["assets/*"],
-            "@theme/*": ["theme/*"],
-            "@hooks/*": ["hooks/*"],
-            "@content/*": ["content/*"]
-        }
-    },
-    "include": ["src"]
+        "noFallthroughCasesInSwitch": true
+    }
 }
